--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,13 +12,13 @@ fastapi = "^0.110.0"
 uvicorn = { extras = ["standard"], version = "^0.28.0" }
 pydantic = "^2.6.4"
 python-ulid = "^2.2.0"
-llama-index-core = "^0.10.20.post2"
+llama-index-core = "^0.10.28"
 llama-index-embeddings-voyageai = "^0.1.3"
-llama-index-readers-file = "^0.1.11"
 llama-index-vector-stores-pinecone = "^0.1.4"
 pinecone-client = "^3.1.0"
 tree-sitter = "^0.21.1"
 tree-sitter-languages = "^1.10.2"
+llama-index-readers-file = "^0.1.16"
 
 
 [build-system]
