--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ pinecone-client = "^3.1.0"
 tree-sitter = "^0.21.1"
 tree-sitter-languages = "^1.10.2"
 llama-index-readers-file = "^0.1.16"
+llama-index-embeddings-ollama = "^0.1.2"
 
 
 [build-system]
