--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ tree-sitter = "^0.21.1"
 tree-sitter-languages = "^1.10.2"
 llama-index-readers-file = "^0.1.16"
 llama-index-embeddings-ollama = "^0.1.2"
+llama-index-vector-stores-postgres = "^0.1.5"
 
 
 [build-system]
